--- a/trunk/keyclick/form-export.phtml
+++ b/trunk/keyclick/form-export.phtml
@@ -20,7 +20,6 @@ if (!ini_get('register_globals'))
 // Assign incoming arguments to themselves to prevent 'uninitialized variable' warnings later.
 //
 //
-require_once("f_putlibphotorandomplaced.phtml");
 require_once("f_bodyopen.phtml");
 require_once("f_roleemailaddress.phtml");
 require_once("f_bevalidboardingpass.phtml");
@@ -52,18 +51,18 @@ if ($ini[app][do_report_all_errors]) error_reporting(E_ALL);
         <hr>
         <br>
         <?
-           $agency = BeValidBoardingPass($db_link,$bpn,$mode);
+           $agency = BeValidBoardingPass($db_link,$bpn);
            if ($agency == "")
               {
-              KickOff($mode);
+              KickOff();
               }
            else
               {
               ?>
               <p>Specify which kind of ROD you want to export:</p>
               <table cellspacing=10>
-                 <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td align=right valign=top><b><a href=<? echo $mode; ?>form-export-full.phtml?bpn=<? echo $bpn; ?>>Full</b></a></td><td valign=top>Export the entire ROD, suitable for a <i>total saturation mailout</i>.</td>
-                 <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td align=right valign=top nowrap><b><a href=<? echo $mode; ?>form-export-follow-up.phtml?bpn=<? echo $bpn; ?>>Follow-up</b></a></td><td valign=top>This is the full ROD <i>minus</i> records associated with recent donations.&nbsp; This option gives you the chance to define what "recent" means.</td>
+                 <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td align=right valign=top><b><a href=form-export-full.phtml?bpn=<? echo $bpn; ?>>Full</b></a></td><td valign=top>Export the entire ROD, suitable for a <i>total saturation mailout</i>.</td>
+                 <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td align=right valign=top nowrap><b><a href=form-export-follow-up.phtml?bpn=<? echo $bpn; ?>>Follow-up</b></a></td><td valign=top>This is the full ROD <i>minus</i> records associated with recent donations.&nbsp; This option gives you the chance to define what "recent" means.</td>
               </table>
               <br>
               <hr>
